<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Matthew White</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet scelerisque orci, a finibus risus. Suspendisse commodo accumsan tincidunt. Fusce eu porta lectus. In auctor risus massa, in blandit purus ullamcorper id. Aliquam auctor diam eu libero malesuada interdum. Duis facilisis dictum nunc sed lacinia. Vestibulum ex lectus, venenatis id ultrices id, mollis vel mi. Ut volutpat vel diam a bibendum.
\n\n
Integer sit amet vestibulum est, ac tincidunt libero. Sed consectetur sollicitudin magna sit amet consequat. Nullam tempor ante a sollicitudin mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla venenatis ultricies consequat. Praesent congue ut risus vitae euismod. Nulla hendrerit ac mauris bibendum mollis. Duis commodo, dolor ut cursus venenatis, ipsum turpis dignissim tellus, eget faucibus lorem odio eu sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec placerat dapibus eros, quis mattis sapien commodo at. Fusce tristique vitae urna et volutpat. Nulla facilisi. Vestibulum aliquam viverra mi. Fusce scelerisque non lacus vitae sagittis.
\n\n
Fusce consectetur laoreet libero, a interdum nisl lacinia efficitur. Donec nisl justo, malesuada eget ipsum ut, posuere faucibus sapien. Pellentesque nulla magna, euismod at vehicula sed, eleifend sed mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ipsum sem, cursus dapibus ipsum id, viverra molestie purus. Fusce pretium purus a dictum sollicitudin. Maecenas sit amet odio at quam convallis elementum. Vestibulum pretium arcu a feugiat rutrum. Maecenas tempor libero in interdum consequat. Mauris ultrices arcu non velit dictum, sed dignissim mi condimentum. Etiam laoreet suscipit erat, quis cursus lorem lobortis ut. Praesent vehicula iaculis imperdiet. Phasellus non nibh quis urna venenatis interdum. In porta pretium orci, eget ultricies elit dapibus vitae. Sed ac orci erat.
\n\n
Phasellus luctus aliquet sapien, sit amet rhoncus tortor bibendum at. Ut id malesuada urna. Pellentesque et neque consectetur, rhoncus neque in, volutpat neque. Integer sed lectus faucibus, tincidunt ex et, fermentum nunc. Sed lorem nisi, convallis at ante ac, rhoncus suscipit nisi. Duis eu massa ut lorem malesuada ullamcorper facilisis sit amet mi. Aliquam erat volutpat. Vestibulum pharetra vel metus vel elementum. In quis libero eros. Fusce risus purus, mattis eu dictum vel, suscipit a metus. Maecenas at massa sollicitudin, malesuada ex ultricies, vehicula ante.
\n\n
Maecenas et neque eget metus consequat varius. Etiam non egestas ante, vitae egestas massa. Suspendisse potenti. Proin volutpat turpis eget volutpat pretium. Vivamus non diam non velit convallis posuere quis nec nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi molestie, dui sit amet elementum mattis, erat arcu ornare dolor, non lacinia leo sapien vel nunc.
    </string>
    <string name="avatar_image">Avatar image</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>